fixed alignment issue

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -314,7 +314,7 @@
 
     div:nth-child(2) {
 
-      
+      justify-content: flex-start;
       button {
        width: 78vw;
       }
